--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@mistralai/mistralai": "^1.3.4",
-    "@nestjs/common": "^10.3.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
-    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/common": "^10.4.8",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.8",
+    "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/swagger": "^7.4.2",
     "nestjs-zod": "^4.2.0",
-    "openai": "^4.24.1",
+    "openai": "^4.72.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.6",
+    "@nestjs/cli": "^10.4.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.6",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.6.3"
   }
 }
